informações api atualizadas
